Avoid the W3C logo wrapping too soon

--- a/_css/components/minimal-header.css
+++ b/_css/components/minimal-header.css
@@ -93,4 +93,8 @@
 
 .tool-header {
   padding-block: 0.5rem;
+
+  .minimal-header-info {
+    flex: 1 0 33%;
+  }
 }
